2004-07-20 Gustaf.Neumann@wu-wien.ac.at
        * fixed a potential crash when a instmixin was registered on itself

2004-07-19  Uwe Zdun <uwe.zdun@wu-wien.ac.at>
        * added checkoptions to non pos args
	* added tests & documentation of non pos args

2004-07-18 Gustaf.Neumann@wu-wien.ac.at
        * added removal of autom4te.cache to distclean
        * make doc added to "all" target
        * autogenerated html docs are removed in a make clean
        * remove all *~ files in directory tree via find (ok with TEA3?)

2004-07-11 jim@jam.sessionsnet.org
        * revamped configure recursion
        * added "--with-xotcl=<pathToXotclConfig.sh>" to child configure.ins
        * arranged for root configure to call child configures specifying path
        * located and fixed bug where parts of the build cannot find xotcl.h
           if xotcl was not "make install"ed (bug implies build always finds
           old includes)
        * ensured "make clean" and "make distclean" still worked
        * TODO: clean should remove emacs backup files
              distclean should remove autom4te.cache
              docs should be built during make, installed during make install
              and removed from the build dir during make clean.

2004-07-03 Gustaf.Neumann@wu-wien.ac.at
        * extended commands filter, mixin, instfilter, instmixin:
          These commands are changed in a backward compatible manner. They
          can be used as follows

             obj mixin:              same as: obj info mixin
             obj mixin {C1 C2}       same as: obj mixin set {C1 C2}
             obj mixin set {C1 C2}   sets the mixins for obj
             obj mixin get {C1 C2}   same as: obj info mixin
             obj mixin add C3        adds a mixin on front of the mixin list
             obj mixin add C3 end    adds a mixin at the end the mixin list
             obj mixin add C3 3      adds a mixin at the 3rd position